@@ -6,7 +6,7 @@
 #
 # Copyright (c) 2004 by Andreas Kupries
 #
-# RCS: @(#) $Id: sets.test,v 1.5 2004/05/19 04:34:50 andreas_kupries Exp $
+# RCS: @(#) $Id: sets.test,v 1.6 2004/08/05 05:44:01 andreas_kupries Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -239,6 +239,18 @@ test set-6.7 {difference} {
 test set-6.8 {difference} {
     lsort [setop difference $sd $sa]
 } {e f}
+
+test set-6.9 {difference} {
+    lsort [setop difference \
+	    [list "Washington, DC (District of Columbia)" Maryland Virginia] \
+	    [list "Washington, DC (District of Columbia)" Virginia]]
+} Maryland
+
+test set-6.10 {difference} {
+    lsort [setop difference \
+	    [list DC Maryland Virginia] \
+	    [list DC Virginia]]
+} Maryland
 
 
 test set-7.0 {symdiff} {
